# Helpers

./: API.md  CMakeLists.txt  INSTALL.md  README.md  h_bin.c  h_bin.h  h_cpc.c  h_cpc.h  h_lggr.c  h_lggr.h  h_str.c  h_str.h  helpers-cfg.h.in  libHelpers.pc.in
.gitea/workflows/: ccpp.yml
.github/workflows/: ccpp.yml  codeql-analysis.yml
cmake-modules/: FindHelpers.cmake
doc/: doxygen.cfg
include/: h_bin.h  h_cpc.h  h_lggr.h  h_memmgr.h  h_memory.h  h_mfdfile.h  h_str.h
src/: h_bin.c  h_cpc.c  h_lggr.c  h_memmgr.c  h_memory.c  h_mfdfile.c  h_str.c
test/: Makefile  helpers_test.c  lggr_test.c
